# ComputerNetworking

./: CMakeLists.txt  README.md
ComputerNetworking/: CMakeLists.txt  ComputerNetworking.cpp  ComputerNetworking.h
client/: CMakeLists.txt
client/include/: Client.h  Mail.h
client/src/: Client.cpp  fileTransfer.cpp  mail.cpp
server/: CMakeLists.txt
server/include/: Server.h
server/src/: Server.cpp  Shutdown.cpp  Task.cpp  fileTransfer.cpp  processInteract.cpp  screenCapture.cpp  servicesInteract.cpp
webcam/: CMakeLists.txt
webcam/include/: camera.h
webcam/src/: camera.cpp  convert.cpp  media.cpp  renderWindow.cpp
